revisando manualmente las entidades y componentes que las usan en el backend, moedelos, validators, migraciones, bases de datos, tests. Se han creado envs para entorno de prueba, produccion  y dev. Muchos tests no funcionan, y son errores en la aplicacion. De momento nomenclature debe reflejar nombre y codigo unicamente, pero no impacta en la base de datos de pruebas
