# backend inventario/validators/agentValidator.js
@@ -12,6 +12,7 @@ const handleValidationErrors = (req, res, next) => {
 
 const agentBodyValidation = [
   body('name', 'El nombre es requerido').not().isEmpty().trim().escape(),
+  body('lastname', 'El apellido es requerido').not().isEmpty().trim().escape(),
   body('dni', 'El DNI debe ser un string').optional().isString().trim().escape(),
   body('roleId', 'El rol es requerido').not().isEmpty(),
   body('roleId', 'El ID del rol debe ser un número entero').isInt(),
@@ -20,6 +21,7 @@ const agentBodyValidation = [
 
 const agentUpdateValidation = [
   body('name').optional().not().isEmpty().withMessage('El nombre no puede estar vacío').trim().escape(),
+  body('lastname').optional().not().isEmpty().withMessage('El apellido no puede estar vacío').trim().escape(),
   body('dni').optional().isString().trim().escape(),
   body('roleId').optional().isInt().withMessage('El ID del rol debe ser un número entero'),
   handleValidationErrors,
